--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WhereIKeep_App</string>
+    <string name="app_name">WhereIKeep</string>
     <string name="id">ID</string>
     <string name="name">Name</string>
     <string name="location">location</string>
